[package]
name = "vmman"
version = "0.1.0"
authors = ["Mike Qin <mikeandmore@gmail.com>"]
edition = "2018"

[[bin]]
name = "vmman"
path = "src/main.rs"

[[bin]]
name = "vm-init"
path = "src/init.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.4.2"
json = "0.12.4"
curl = "0.4.34"
libc = "0.2.66"
quick-xml = "0.20.0"

[profile.release]
lto = true
panic = "abort"
